--- a/index.css
+++ b/index.css
@@ -6,14 +6,156 @@ body {
 
 .header-nav {
     width: 100%;
-    height: 130px;
-    padding-left: 277px;
-    padding-right: 277px;
-    padding-top: 82px;
-    padding-bottom: 13px;
+    height: 50px;
+    padding: 50px 0px 30px 0px;
     background-color: rgba(154, 205, 50, 0.80);
     display: inline-flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
+}
+
+.nav-options {
+    height: 35px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.aboutme, .myworks, .contactme {
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 100%;
+    color: white;
+}
+
+.section-space {
+    height: 30px;
+}
+
+.life-quote {
+    width: 100%;
+    height: 799px;
+}
+
+.section-space-2 {
+    height: 100px;
+}
+
+.aboutme-section {
+    width: 100%;
+    height: 350px;
+    padding: 0 0 0 0;
+    background-color: rgba(154, 205, 50, 0.80);
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.aboutme-texts {
+    width: 1110px;
+    height: 351px;
+    padding: 18px 0 9px 24px;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+}
+
+.aboutme-title {
+    padding: 20px 0 0 0;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 100%;
+    color: white;
+}
+
+.space-between {
+    height: 27px;
+}
+
+.aboutme-content {
+    width: 1000px;
+    height: 250px;
+    font-size: 22px;
+    line-height: 100%;
+    color: white;
+}
+
+.breaker-aboutme {
+    width: 33px;
+}
+
+.display-pic {
+    width: 469px;
+    height: 351px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
+}
+
+.contactme-section {
+    text-align: center;
+    width: 100%;
+    height: 517px;
+    background-color: rgba(154, 205, 50, 0.80);
+    position: relative;
+}
+
+.get-in-touch {
+    padding: 20px 0 0 0;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 100%;
+    color: white;
+}
+
+.gmail-logo {
+    width: 137.89px;
+    height: 100px;
+    left: 299px;
+    top: 121px;
+    position: absolute;
+}
+
+.linkedin-logo {
+    width: 101.13px;
+    height: 100px;
+    left: 669px;
+    top: 121px;
+    position: absolute;
+}
+
+.github-logo {
+    width: 100px;
+    height: 100px;
+    left: 1002px;
+    top: 121px;
+    position: absolute;
+}
+
+.hackerrank-logo {
+    width: 100px;
+    height: 100px;
+    left: 318px;
+    top: 325px;
+    position: absolute;
+}
+
+.twitter-logo {
+    width: 118.90px;
+    height: 100px;
+    left: 661px;
+    top: 325px;
+    position: absolute;
+}
+
+.linktree-logo {
+    width: 119.02px;
+    height: 100px;
+    left: 992px;
+    top: 325px;
+    position: absolute;
 }
