--- a/OtherPages/MyWorks/works.css
+++ b/OtherPages/MyWorks/works.css
@@ -4,6 +4,10 @@ body {
     padding: 0 0 0 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .header-nav {
     width: 100%;
     height: 50px;
@@ -21,6 +25,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    font-family: 'Kanit', sans-serif;
 }
 
 .aboutme, .myworks, .contactme {
@@ -130,10 +135,13 @@ body {
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
+    border-radius: 40px; /* Rounded corners */
+    font-size: 30px;
 }
-  
+
 #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+    color: rgba(154, 205, 50, 0.80);
+    background-color: white;
 }
 
 .arrow {
