--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body {
     padding: 0 0 0 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .header-nav {
     width: 100%;
     height: 50px;
@@ -21,6 +25,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    font-family: 'Kanit', sans-serif;
 }
 
 .aboutme, .myworks, .contactme {
@@ -63,11 +68,12 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
+    font-family: 'Padauk', sans-serif;
 }
 
 .aboutme-title {
     padding: 20px 0 0 0;
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 700;
     line-height: 100%;
     color: white;
@@ -173,11 +179,13 @@ body {
     color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
+    border-radius: 40px; /* Rounded corners */
+    font-size: 30px;
 }
-  
+
 #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+    color: rgba(154, 205, 50, 0.80);
+    background-color: white;
 }
 
 .arrow {
