--- a/OtherPages/AboutMe/aboutme.css
+++ b/OtherPages/AboutMe/aboutme.css
@@ -70,26 +70,86 @@ body {
     height: 30px;
 }
 
-.InspireQuote {
+.aboutme {
     width: 100%;
     background-color: black;
     display: inline-flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    padding-bottom: 3%;
+}
+
+.aboutmetext {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 5%;
     font-family: 'Hind Siliguri', sans-serif;
 }
 
-.Saying {
-    width: 46%;
-    padding-left: 6%;
-    font-size: 40px;
+.Greeting {
+    font-size: 50px;
     font-weight: 700;
-    line-height: 100%;
     color: white;
 }
 
-.Elonmusk {
-    padding-left: 6%;
-    width: 28%;
+.myself {
+    width: 80%;
+    font-size: 20px;
+    color: white;
+}
+
+.DP {
+    width: 30%;
+    padding-right: 5%;
+}
+
+.getintouch {
+    width: 100%;
+    background-color: black;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    font-family: 'Hind Siliguri', sans-serif;
+}
+
+.contacttext {
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 100%;
+    color: white;
+    padding-left: 50px;
+}
+
+.contactlinks {
+    padding-left: 50px;
+    width: 80%;
+    padding-bottom: 50px;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.twitter-contact, .github-contact, .linkedin-contact {
+    width: 40px;
+    height: 40px;
+}
+
+.gmail-contact {
+    width: 81.43px;
+    height: 80px;
+}
+
+.hackerrank-contact {
+    width: 54.10px;
+    height: 60px;
+}
+
+.linktree-contact {
+    width: 60px;
+    height: 50px;
 }
