--- a/OtherPages/MyWorks/works.css
+++ b/OtherPages/MyWorks/works.css
@@ -1,157 +1,86 @@
 body {
+    background-color: #181818;
     margin: 0 0 0 0;
-    border: 0 0 0 0;
-    padding: 0 0 0 0;
 }
 
-html {
-    scroll-behavior: smooth;
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+    
+::-webkit-scrollbar-track {
+    background: #A9A9A9;
+    border-radius: 10px;
 }
 
-.header-nav {
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #808080;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #383838;
+}
+
+.navbar {
     width: 100%;
-    height: 50px;
-    padding: 50px 0px 30px 0px;
-    background-color: rgba(154, 205, 50, 0.80);
+    padding-top: 1%;
+    padding-bottom: 1%;
     display: inline-flex;
     flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    background: radial-gradient(92.33% 4771.2% at 51.77% 100%, #0000FF 0%, #9900CC 43.14%, #0000FF 100%);
+    font-family: 'Francois One', sans-serif;
 }
 
-.nav-options {
-    height: 35px;
+.Pagelinks {
+    width: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
-    font-family: 'Kanit', sans-serif;
+    justify-content: space-between;
+    padding-left: 8%;
 }
 
-.aboutme, .myworks, .contactme {
-    font-size: 25px;
-    font-weight: 700;
+.About, .Works, .Blogs {
+    font-size: 30px;
     line-height: 100%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     color: white;
     text-decoration: none;
 }
 
-.section-space {
+.Quicklinks {
+    width: 16%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 5%;
+}
+
+.twitter-logo, .github-logo, .linkedin-logo {
+    width: 30px;
     height: 30px;
 }
 
-.section-myworks {
-    font-size: 70px;
-    line-height: 100%;
-    color: rgba(154, 205, 50, 1);
-    text-align: center;
+.space-division {
+    height: 30px;
 }
 
-.cards {
-    margin: 0 100px 90px 100px;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.30);
-    border-radius: 30px;
+.worksrow {
+    width: 90%;
+    padding-left: 5%;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.IIMUN-logo {
-    width: 300px;
-    height: 300px;
-}
-
-.contactme-section {
-    text-align: center;
+.IIMUN-work {
     width: 100%;
-    height: 517px;
-    background-color: rgba(154, 205, 50, 0.80);
-    position: relative;
-}
-
-.get-in-touch {
-    padding: 20px 0 0 0;
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 100%;
-    color: white;
-}
-
-.gmail-logo {
-    width: 137.89px;
-    height: 100px;
-    left: 299px;
-    top: 121px;
-    position: absolute;
-}
-
-.linkedin-logo {
-    width: 101.13px;
-    height: 100px;
-    left: 669px;
-    top: 121px;
-    position: absolute;
-}
-
-.github-logo {
-    width: 100px;
-    height: 100px;
-    left: 1002px;
-    top: 121px;
-    position: absolute;
-}
-
-.hackerrank-logo {
-    width: 100px;
-    height: 100px;
-    left: 318px;
-    top: 325px;
-    position: absolute;
-}
-
-.twitter-logo {
-    width: 118.90px;
-    height: 100px;
-    left: 661px;
-    top: 325px;
-    position: absolute;
-}
-
-.linktree-logo {
-    width: 119.02px;
-    height: 100px;
-    left: 992px;
-    top: 325px;
-    position: absolute;
-}
-
-#myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: rgba(154, 205, 50, 0.80); /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    border-radius: 40px; /* Rounded corners */
-    font-size: 30px;
-}
-
-#myBtn:hover {
-    color: rgba(154, 205, 50, 0.80);
-    background-color: white;
-}
-
-.arrow {
-    border: solid black;
-    border-width: 0 5px 5px 0;
-    display: inline-block;
-    padding: 10px;
-}
-
-.up {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
+    max-height: 300px;
+    border-radius: 30px;
 }
