--- a/OtherPages/MyWorks/works.css
+++ b/OtherPages/MyWorks/works.css
@@ -79,8 +79,27 @@ body {
     justify-content: space-between;
 }
 
-.IIMUN-work {
+.my-work {
     width: 100%;
     max-height: 300px;
     border-radius: 30px;
 }
+
+.works:hover {
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 19px 43px;
+  	transform: translate3d(0px, -7px, -7px);
+}
+
+#overlay:hover {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
