--- a/OtherPages/MyWorks/works.css
+++ b/OtherPages/MyWorks/works.css
@@ -77,6 +77,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 3%;
 }
 
 .my-work {
